objects/State_Related_Company__c.object
<CustomObject>
    <description>only visible in state municipalities</description>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <label>Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Vendor</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Municipality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State Municipality</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Municipality__c.State_Record__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Municipality__c</referenceTo>
        <relationshipName>State_Competitors1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State Related Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Competitor TO, Vendors</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>State Related Companies</relationshipLabel>
        <relationshipName>State_Competitor</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>State Related Company</label>
    <nameField>
        <displayFormat>SRC-{0}</displayFormat>
        <label>State Related Company</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>State Related Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>